# mQTL-workflow

./: .dockeignore  .gitignore  Dockerfile  README.md  flow_one.nf  flow_three.nf  flow_two.nf  info.sh  nextflow.config  nextflow.nf  pyproject.toml  requirements.R
diagrams/: flow_one.html  flow_three.html  flow_two.html
docker/: flow_one
modules/: utils.nf
templates/: ModifiedRefBase.R  sanity_check.py
