[tool.poetry]
name = "mqtl-workflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mqtl_workflow"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
tqdm = "^4.66.4"
pandas = "^2.2.2"
pyarrow = "16.0.0"
scipy = "1.13.0"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
